--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Porfolio | Nagasiva Pulapa 🎯</title>
+    <title>Porfolio | Nagasiva Pulapa</title>
   </head>
   <body>
     <div id="root"></div>
