--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!--<link rel="icon" type="image/svg+xml" href="src/sections/portfolio_pic.jpg">-->
-    <link rel="icon" type="image/svg+xml" href="src/sections/favicon.jpg">
+    <link rel="icon" type="image/jpeg" href="/favicon.jpg" />
     <!--<link rel="icon" type="image/svg+xml" href="src/sections/logo.png">-->
 
 
